ids added changes fixes

--- a/about.html
+++ b/about.html
@@ -134,28 +134,28 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="service.html" class="service-box">
                             <img src="./assets/images/home/service-centermega.png" alt="Service Center">
                             <div class="service-overlay">
                                 <h3>SERVICE CENTER</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="storage.html" class="service-box">
                             <img src="./assets/images/home/storage-mega.png" alt="Storage">
                             <div class="service-overlay">
                                 <h3>STORAGE</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="parts.html" class="service-box">
                             <img src="./assets/images/home/parts-mega.png" alt="Parts">
                             <div class="service-overlay">
                                 <h3>PARTS</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -317,7 +317,9 @@
                             <div class="story-divider"></div>
                             <div class="story-content">
                                 <h4>A SERVICE-FIRST BEGINNING</h4>
-                                <p>Starboard Choice Marine is founded in downtown Mishawaka, IN by Steve and Andy Peterson. Seeing a lack of quality marine service in the Michiana area, they set out to build a friendly, local business focused entirely on service.</p>
+                                <p>Starboard Choice Marine is founded in downtown Mishawaka, IN by Steve and Andy
+                                    Peterson. Seeing a lack of quality marine service in the Michiana area, they set out
+                                    to build a friendly, local business focused entirely on service.</p>
                             </div>
                         </div>
                     </div>
@@ -328,7 +330,9 @@
                             <div class="story-divider"></div>
                             <div class="story-content">
                                 <h4>Building Trust Through Service</h4>
-                                <p>Operating as a service-only facility, Starboard Choice Marine earns a loyal customer base by embracing an “old-school” service mentality—prioritizing personal care, honesty, and attention to detail.</p>
+                                <p>Operating as a service-only facility, Starboard Choice Marine earns a loyal customer
+                                    base by embracing an “old-school” service mentality—prioritizing personal care,
+                                    honesty, and attention to detail.</p>
                             </div>
                         </div>
                     </div>
@@ -340,7 +344,8 @@
                             <div class="story-divider"></div>
                             <div class="story-content">
                                 <h4>Entering Boat Sales</h4>
-                                <p>Responding to customer demand, Starboard Choice Marine expands into boat sales, adding Tahoe® Luxury Pontoon Boats and MirroCraft fishing boats to the lineup.</p>
+                                <p>Responding to customer demand, Starboard Choice Marine expands into boat sales,
+                                    adding Tahoe® Luxury Pontoon Boats and MirroCraft fishing boats to the lineup.</p>
                             </div>
                         </div>
                     </div>
@@ -352,7 +357,8 @@
                             <div class="story-divider"></div>
                             <div class="story-content">
                                 <h4>Industry-Leading Sales Success</h4>
-                                <p>Starboard Choice Marine becomes the #1 volume Tahoe pontoon dealer in Indiana for three consecutive years (2013-2015).</p>
+                                <p>Starboard Choice Marine becomes the #1 volume Tahoe pontoon dealer in Indiana for
+                                    three consecutive years (2013-2015).</p>
                             </div>
                         </div>
                     </div>
@@ -364,7 +370,9 @@
                             <div class="story-divider"></div>
                             <div class="story-content">
                                 <h4>A New Home in Edwardsburg</h4>
-                                <p>After outgrowing the Mishawaka location, the business purchases Pleasant Lake Resort in Edwardsburg, MI. Renovations begin on a modern showroom, a state-of-the-art service facility, and an on-site launch for water testing.</p>
+                                <p>After outgrowing the Mishawaka location, the business purchases Pleasant Lake Resort
+                                    in Edwardsburg, MI. Renovations begin on a modern showroom, a state-of-the-art
+                                    service facility, and an on-site launch for water testing.</p>
                             </div>
                         </div>
                     </div>
@@ -376,7 +384,8 @@
                             <div class="story-divider"></div>
                             <div class="story-content">
                                 <h4>Gold Status & Lift Sales</h4>
-                                <p>Starboard Choice Marine earns its first national “Gold” dealership status from Tahoe Pontoons. That same year, Great Lakes Lifts are added to the product lineup.</p>
+                                <p>Starboard Choice Marine earns its first national “Gold” dealership status from Tahoe
+                                    Pontoons. That same year, Great Lakes Lifts are added to the product lineup.</p>
                             </div>
                         </div>
                     </div>
@@ -388,7 +397,9 @@
                             <div class="story-divider"></div>
                             <div class="story-content">
                                 <h4>Facility Expansion & New Brands</h4>
-                                <p>The facility expands again with an additional on-site storage building. PolarKraft aluminum fishing boats are added to the sales lineup as business continues to grow.</p>
+                                <p>The facility expands again with an additional on-site storage building. PolarKraft
+                                    aluminum fishing boats are added to the sales lineup as business continues to grow.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -400,7 +411,8 @@
                             <div class="story-divider"></div>
                             <div class="story-content">
                                 <h4>Million Dollar Dealer Recognition</h4>
-                                <p>Tahoe awards Starboard Choice Marine the “Million Dollar Dealer” honor—an achievement maintained every year from 2018 through 2023.</p>
+                                <p>Tahoe awards Starboard Choice Marine the “Million Dollar Dealer” honor—an achievement
+                                    maintained every year from 2018 through 2023.</p>
                             </div>
                         </div>
                     </div>
@@ -412,7 +424,9 @@
                             <div class="story-divider"></div>
                             <div class="story-content">
                                 <h4>Increased Efficiency & Service Expansion</h4>
-                                <p>A new boat rigging facility is completed, improving efficiency for new boat preparation and delivery. AlumaCraft fishing boats are added, and boat hoist installation and removal services launch with the addition of a work barge.</p>
+                                <p>A new boat rigging facility is completed, improving efficiency for new boat
+                                    preparation and delivery. AlumaCraft fishing boats are added, and boat hoist
+                                    installation and removal services launch with the addition of a work barge.</p>
                             </div>
                         </div>
                     </div>
@@ -424,7 +438,9 @@
                             <div class="story-divider"></div>
                             <div class="story-content">
                                 <h4>Commercial & Government Work Boats</h4>
-                                <p>Starboard Choice Marine begins selling Bayview commercial work boats, supplying government and commercial agencies across the U.S., including as far south as Florida.</p>
+                                <p>Starboard Choice Marine begins selling Bayview commercial work boats, supplying
+                                    government and commercial agencies across the U.S., including as far south as
+                                    Florida.</p>
                             </div>
                         </div>
                     </div>
@@ -434,7 +450,9 @@
                         <div class="story-card ourstory-lastcard">
                             <div class="story-content">
                                 <h4>Growing Forward, <br class="d-none d-lg-block"> Staying Grounded</h4>
-                                <p>Starboard Choice Marine begins selling Bayview commercial work boats, supplying government and commercial agencies across the U.S., including as far south as Florida.</p>
+                                <p>Starboard Choice Marine begins selling Bayview commercial work boats, supplying
+                                    government and commercial agencies across the U.S., including as far south as
+                                    Florida.</p>
                             </div>
                         </div>
                     </div>
