--- a/index.html
+++ b/index.html
@@ -134,28 +134,28 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="service.html" class="service-box">
                             <img src="./assets/images/home/service-centermega.png" alt="Service Center">
                             <div class="service-overlay">
                                 <h3>SERVICE CENTER</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="storage.html" class="service-box">
                             <img src="./assets/images/home/storage-mega.png" alt="Storage">
                             <div class="service-overlay">
                                 <h3>STORAGE</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="parts.html" class="service-box">
                             <img src="./assets/images/home/parts-mega.png" alt="Parts">
                             <div class="service-overlay">
                                 <h3>PARTS</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -297,7 +297,8 @@
                 </div>
                 <div class="hero-search">
                     <input type="text" placeholder="Search Inventory">
-                    <button type="submit" id="search-inventory-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    <button type="submit" id="search-inventory-btn"><i
+                            class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
             </div>
 
@@ -474,7 +475,8 @@
                                     Don't let adventure pass you by. Visit our showroom or browse our extensive online
                                     inventory today.
                                 </p>
-                                <a href="#" id="more-about-us-btn" class="btn-outline-global d-inline-flex">More About Us</a>
+                                <a href="#" id="more-about-us-btn" class="btn-outline-global d-inline-flex">More About
+                                    Us</a>
                             </div>
                         </div>
                     </div>
@@ -546,7 +548,7 @@
                 <div class="row no-gutters justify-content-center">
                     <!-- CTA Box 1 -->
                     <div class="col-lg-3 col-md-6 col-12 mx-lg-3 mx-0">
-                        <a href="#" class="cta-box">
+                        <a href="/events-promos.html" class="cta-box">
                             <div class="cta-icon">
                                 <img src="./assets/images/home/promos.svg" alt="Promos Icon">
                             </div>
@@ -555,7 +557,7 @@
                     </div>
                     <!-- CTA Box 2 -->
                     <div class="col-lg-3 col-md-6 col-12 mx-lg-3 mx-0">
-                        <a href="#" class="cta-box">
+                        <a href="/news-articles.html" class="cta-box">
                             <div class="cta-icon">
                                 <img src="./assets/images/home/news-articles.svg" alt="News Icon">
                             </div>
@@ -564,7 +566,7 @@
                     </div>
                     <!-- CTA Box 3 -->
                     <div class="col-lg-3 col-md-6 col-12 mx-lg-3 mx-0">
-                        <a href="#" class="cta-box">
+                        <a href="/trade.html" class="cta-box">
                             <div class="cta-icon">
                                 <img src="./assets/images/home/sell-trade-svg.svg" alt="Sell/Trade Icon">
                             </div>
@@ -610,7 +612,8 @@
                                         customers.
                                     </p>
                                     <a href="https://www.facebook.com/starboardchoice.marine/?utm_source=chatgpt.com#"
-                                        target="_blank" id="facebook-community-btn" class="btn-outline-global">Join our community and never miss a
+                                        target="_blank" id="facebook-community-btn" class="btn-outline-global">Join our
+                                        community and never miss a
                                         post!</a>
                                 </div>
                             </div>
