--- a/parts.html
+++ b/parts.html
@@ -46,7 +46,7 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1 class="hero-title">Parts Department</h1>
-                <a href="#" id="parts-request-btn" class="btn-global">Request Parts</a>
+                <a href="#form-parts-section" id="parts-request-btn" class="btn-global">Request Parts</a>
             </div>
         </section>
         <!-- Hero Banner Section End -->
@@ -59,7 +59,7 @@
                         <h2 class="section-title-alt mb-lg-4 mb-3">Marine Parts You Can Count On</h2>
                         <div class="service-intro-content">
                             <p class="mb-4">When it comes to keeping your boat running at its best, quality parts matter. At Starboard Choice Marine, our knowledgeable parts team is here to help you find the right components, accessories, and upgrades for your boat—without the guesswork.</p>
-                            <a href="#" id="parts-request-btn-2" class="btn-outline-teal">Request Parts</a>
+                            <a href="#form-parts-section" id="parts-request-btn-2" class="btn-outline-teal">Request Parts</a>
                         </div>
                     </div>
                 </div>
@@ -122,12 +122,12 @@
         <!-- Services Provided Section End -->
 
         <!-- Request Service Form Start -->
-        <section class="py-lg-5 py-3 request-service-section border-top">
+        <section class="py-lg-5 py-3 request-service-section border-top" id="form-parts-section">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="text-center mb-5">
-                            <h2 class="section-title-alt">REQUEST STORAGE</h2>
+                            <h2 class="section-title-alt">REQUEST PARTS</h2>
                         </div>
                         <form action="#" class="request-service-form">
                             <div class="row">
