--- a/storage.html
+++ b/storage.html
@@ -46,7 +46,7 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1 class="hero-title">Outdoor Winter Boat  <br>Storage</h1>
-                <a href="#" id="storage-request-btn" class="btn-global">Request Storage</a>
+                <a href="#form-storage-section" id="storage-request-btn" class="btn-global">Request Storage</a>
             </div>
         </section>
         <!-- Hero Banner Section End -->
@@ -59,7 +59,7 @@
                         <h2 class="section-title-alt mb-lg-4 mb-3">Secure, Stress-Free Boat Storage</h2>
                         <div class="service-intro-content">
                             <p class="mb-4">Storing your boat won’t be a hassle any longer! Our team at Starboard Choice Marine is here to help. Our outdoor boat storage space is secure and safe, giving you peace of mind when it’s time to store your vessel. Visit us in Edwardsburg, MI, to learn more!</p>
-                            <a href="#" id="storage-request-btn-2" class="btn-outline-teal">Request Storage</a>
+                            <a href="#form-storage-section" id="storage-request-btn-2" class="btn-outline-teal">Request Storage</a>
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                                 <h3 class="about-title mb-4">Storing Your Boat Outdoors</h3>
                                 <p class="about-text mb-lg-4 mb-3">Storing your boat outdoors offers a variety of benefits that make it a popular option among boat owners. Starboard Choice Marine can help with your boat storage needs! Visit us in Edwardsburg, MI, to learn more and submit a storage request.
                                 </p>
-                                <a href="#" id="storage-request-btn-3" class="btn-outline-global d-inline-flex">Request Storage</a>
+                                <a href="#form-storage-section" id="storage-request-btn-3" class="btn-outline-global d-inline-flex">Request Storage</a>
                             </div>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
         <!-- Services Provided Section End -->
 
         <!-- Request Service Form Start -->
-        <section class="py-lg-5 py-3 request-service-section border-top">
+        <section class="py-lg-5 py-3 request-service-section border-top" id="form-storage-section">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
