--- a/trade.html
+++ b/trade.html
@@ -47,7 +47,7 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1 class="hero-title">Sell/Trade Your Boat</h1>
-                <a href="#" id="trade-boat-btn" class="btn-global">Start Selling Your Boat</a>
+                <a href="#form-trade-section" id="trade-boat-btn" class="btn-global">Start Selling Your Boat</a>
             </div>
         </section>
         <!-- Hero Banner Section End -->
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                         <div class="text-center mt-3">
-                            <a href="#" id="trade-boat-btn-2" class="btn-outline-teal">Start Selling Your Boat</a>
+                            <a href="#form-trade-section" id="trade-boat-btn-2" class="btn-outline-teal">Start Selling Your Boat</a>
                         </div>
                     </div>
                 </div>
@@ -134,12 +134,12 @@
         <!-- Services Provided Section End -->
 
         <!-- Request Service Form Start -->
-        <section class="py-lg-5 py-3 request-service-section border-top">
+        <section class="py-lg-5 py-3 request-service-section border-top" id="form-trade-section">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="text-center mb-5">
-                            <h2 class="section-title-alt">REQUEST STORAGE</h2>
+                            <h2 class="section-title-alt">Start Selling Your Boat</h2>
                         </div>
                         <form action="#" class="request-service-form">
                             <div class="row">
