--- a/gold-star-membership.html
+++ b/gold-star-membership.html
@@ -134,28 +134,28 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="service.html" class="service-box">
                             <img src="./assets/images/home/service-centermega.png" alt="Service Center">
                             <div class="service-overlay">
                                 <h3>SERVICE CENTER</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="storage.html" class="service-box">
                             <img src="./assets/images/home/storage-mega.png" alt="Storage">
                             <div class="service-overlay">
                                 <h3>STORAGE</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="parts.html" class="service-box">
                             <img src="./assets/images/home/parts-mega.png" alt="Parts">
                             <div class="service-overlay">
                                 <h3>PARTS</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
