--- a/mission-statement.html
+++ b/mission-statement.html
@@ -134,28 +134,28 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="service.html" class="service-box">
                             <img src="./assets/images/home/service-centermega.png" alt="Service Center">
                             <div class="service-overlay">
                                 <h3>SERVICE CENTER</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="storage.html" class="service-box">
                             <img src="./assets/images/home/storage-mega.png" alt="Storage">
                             <div class="service-overlay">
                                 <h3>STORAGE</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-md-4">
-                        <div class="service-box">
+                        <a href="parts.html" class="service-box">
                             <img src="./assets/images/home/parts-mega.png" alt="Parts">
                             <div class="service-overlay">
                                 <h3>PARTS</h3>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -281,7 +281,7 @@
                     <div class="col-lg-6 order-lg-1 order-2">
                         <div class="about-content-wrapper p-lg-5 p-4">
                             <div class="about-content left-centsec ">
-                                <h1 class="about-title mb-4 text-left">Our Mission Statement</h1>
+                                <h1 class="about-title mb-4 text-lg-left text-center">Our Mission Statement</h1>
                                 <ol class="">
                                     <li>Provide superior products & service so our customers have the most satisfying
                                         boat ownership experience of their lifetime</li>
@@ -290,7 +290,7 @@
                                         vision</li>
                                 </ol>
                                 <a href="/inventory" id="shop-boats-btn"
-                                    class="btn-outline-global d-inline-flex mr-3">Shop Boats</a>
+                                    class="btn-outline-global d-inline-flex mr-3 mb-3">Shop Boats</a>
                                 <a href="/waterfront-solutions" id="waterfront-solutions-btn"
                                     class="btn-outline-global d-inline-flex">Waterfront Solutions</a>
                             </div>
