--- a/gold-star-membership.html
+++ b/gold-star-membership.html
@@ -315,7 +315,7 @@
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 ">
                         <div class="about-img-wrapper">
-                            <img src="./assets/images/gold-star/about-membership.png" alt="Boat Storage"
+                            <img src="./assets/images/gold-star/auto-membership.png" alt="Gold Star Membership"
                                 class="img-fluid w-100">
                         </div>
                     </div>
@@ -334,11 +334,11 @@
         <!-- Our Docks & Lifts Section End -->
 
         <!-- Hart Fabrication Section Start -->
-        <section class="py-lg-5 py-3 service-intro-section">
+        <section class="my-lg-5 my-3 py-lg-5 py-3 hart-fabrication-section">
             <div class="container-fluid">
-                <div class="row align-items-center">
+                <div class="row align-items-center justify-content-center">
 
-                    <div class="col-lg-5">
+                    <div class="col-lg-4">
                         <div class="text-center">
                             <img src="./assets/images/gold-star/gold-star.png" alt="Boat Storage"
                                 class="img-fluid">
@@ -419,14 +419,13 @@
         </section>
         <!-- Our Docks & Lifts Section End -->
 
-        
         <!-- Our Docks & Lifts Section Start -->
         <section class="about-section my-lg-5 my-3">
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 ">
                         <div class="about-img-wrapper">
-                            <img src="./assets/images/gold-star/about-membership.png" alt="Boat Storage"
+                            <img src="./assets/images/gold-star/auto-membership.png" alt="Boat Storage"
                                 class="img-fluid w-100">
                         </div>
                     </div>
