--- a/docks.html
+++ b/docks.html
@@ -48,7 +48,7 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1 class="hero-title">Docks, Lifts, Hoists, <br>& Barge Services</h1>
-                <a href="#form-docks-section" id="docks-request-btn" class="btn-global">Request Storage</a>
+                <a href="#form-docks-section" id="docks-request-btn" class="btn-global">Dock Solutions Inquiry</a>
             </div>
         </section>
         <!-- Hero Banner Section End -->
@@ -79,14 +79,14 @@
         <!-- Our Docks & Lifts Section End -->
 
         <!-- Hart Fabrication Section Start -->
-        <section class="py-lg-5 py-3 service-intro-section">
+        <section class="py-lg-5 py-3 hart-fabrication-section">
             <div class="container-fluid">
                 <div class="row align-items-center">
 
                     <div class="col-lg-6 ">
                         <div class="text-center">
                             <img src="./assets/images/docks/Fabrication.jpg" alt="Boat Storage"
-                                class="img-fluid w-75">
+                                class="img-fluid w-50">
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -102,8 +102,8 @@
         </section>
         <!-- Hart Fabrication Section End -->
         
-        <!-- Our Docks & Lifts Section Start -->
-        <section class="about-section my-lg-5 my-3">
+        <!-- Hoist & Barge Section Start -->
+        <section class="about-section my-lg-5 my-3 hoist-section">
             <div class="container-fluid px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-6 ">
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="about-content-wrapper p-lg-5 p-4">
+                        <div class="about-content-wrapper p-2">
                             <div class="about-content left-centsec">
                                 <h3 class="about-title mb-4">Hoist & Barge Services</h3>
                                 <p class="about-text mb-lg-4 mb-3">Looking for reliable hoist and barge services in Southern Michigan? Starboard Choice Marine, located in Edwardsburg, MI, proudly serves boaters from Niles, Dowagiac, and beyond. We provide timely boat hoist installation after spring ice-out and removal at the end of the season, prioritizing customers who store with us or purchase a new Great Lakes Lift to ensure fast, dependable service.</p>
@@ -125,10 +125,10 @@
                 </div>
             </div>
         </section>
-        <!-- Our Docks & Lifts Section End -->
+        <!-- Hoist & Barge Section End -->
 
         <!-- Services Provided Section Start -->
-        <section class="py-lg-5 py-3 services-provided-section">
+        <section class="pt-lg-5 pt-3 services-provided-section">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
@@ -179,11 +179,11 @@
         <!-- Services Provided Section End -->
 
         <!-- More Info Section Start -->
-        <section class="moreinfo storage-about mb-lg-5 mb-3 py-lg-5 py-3">
+        <section class="moreinfo storage-about py-lg-5 py-3">
             <div class="container px-0">
                 <div class="row no-gutters align-items-center">
                     <div class="col-lg-12 ">
-                        <p class="text-center mb-lg-4">For more information about our hoist and barge services,<strong>give us a call at <a href="tel:2694144351">(269) 414-4351</a></strong>. Starboard Choice Marine proudly serves the boating community in Edwardsburg, MI, and our neighbors from throughout Southern Michigan and Northern Indiana.
+                        <p class="text-center">For more information about our hoist and barge services,<strong>give us a call at <a href="tel:2694144351">(269) 414-4351</a></strong>. Starboard Choice Marine proudly serves the boating community in Edwardsburg, MI, and our neighbors from throughout Southern Michigan and Northern Indiana.
                         </p>
                     </div>
                 </div>
@@ -192,12 +192,12 @@
         <!-- moreinfo Section End -->
 
         <!-- Request Service Form Start -->
-        <section class="py-lg-5 py-3 request-service-section border-top" id="form-docks-section">
+        <section class="py-lg-5 py-3 request-service-section" id="form-docks-section">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="text-center mb-5">
-                            <h2 class="section-title-alt">REQUEST STORAGE</h2>
+                            <h2 class="section-title-alt">Dock Solutions inquiry</h2>
                         </div>
                         <form action="#" class="request-service-form">
                             <div class="row">
@@ -217,12 +217,7 @@
                                     <input type="text" class="request-form-input" placeholder="Zip Code">
                                 </div>
                                 <div class="col-12">
-                                    <input type="text" class="request-form-input"
-                                        placeholder="Boat Year Make and Model">
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="request-form-input" rows="5"
-                                        placeholder="Describe Service Needs"></textarea>
+                                    <textarea class="request-form-input" rows="5" placeholder="Comments"></textarea>
                                 </div>
                                 <div class="col-12 text-center mt-3">
                                     <button type="submit" class="btn-global border-0">Send Request</button>
