--- a/parts.html
+++ b/parts.html
@@ -151,8 +151,12 @@
                                         placeholder="Boat Year Make and Model">
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="request-form-input" rows="5"
-                                        placeholder="Describe Service Needs"></textarea>
+                                    <input type="text" class="request-form-input"
+                                        placeholder="Part #(s)">
+                                </div>
+                                <div class="col-12">
+                                    <textarea class="request-form-input" rows="1"
+                                        placeholder="Part description(s)"></textarea>
                                 </div>
                                 <div class="col-12 text-center mt-3">
                                     <button type="submit" class="btn-global border-0">Send Request</button>
