--- a/trade.html
+++ b/trade.html
@@ -163,8 +163,8 @@
                                         placeholder="Boat Year Make and Model">
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="request-form-input" rows="5"
-                                        placeholder="Describe Service Needs"></textarea>
+                                    <textarea class="request-form-input" rows="1"
+                                        placeholder="Additional Comments"></textarea>
                                 </div>
                                 <div class="col-12 text-center mt-3">
                                     <button type="submit" class="btn-global border-0">Send Request</button>
